--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.prod.js",
-    "dev": "webpack-dev-server --config ./build/webpack.dev.js --open"
+    "dev": "webpack-dev-server --config ./build/webpack.dev.js --open",
+    "build:stats": "webpack --config ./build/webpack.prod.js --json > stats.json"
   },
   "husky": {
     "hooks": {
@@ -51,18 +52,20 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.6",
     "html-loader": "^1.1.0",
-    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.3",
+    "thread-loader": "^2.1.3",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.2",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
