--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config ./build/webpack.prod.js",
     "dev": "webpack-dev-server --config ./build/webpack.dev.js --open",
     "build:stats": "webpack --config ./build/webpack.prod.js --json > stats.json",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "config": {
     "commitizen": {
@@ -43,6 +44,7 @@
     "commitizen": "^4.1.2",
     "commitlint-config-cz": "^0.13.1",
     "conventional-changelog": "^3.1.21",
+    "conventional-changelog-cli": "^2.0.34",
     "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
